# funny_jump

./: LICENSE  README.md  build.spec  pyproject.toml
.github/workflows/: build.yml  main.yml
src/funny_jump/bootstrap/: cli.py
src/funny_jump/bootstrap/entrypoint/: py_game.py
src/funny_jump/domain/: level_manager.py
src/funny_jump/domain/entity/: level.py  platform.py  player.py
src/funny_jump/domain/service/: platform_collide.py
src/funny_jump/domain/sevice/: platform_collide.py
src/funny_jump/domain/value_object/: bounds.py  velocity.py
src/funny_jump/engine/: asset_manager.py  collider.py  font.py  screen.py  sprite.py
src/funny_jump/engine/animation/: animation_loader.py  animation_manager.py
src/funny_jump/engine/resource_loader/: base.py  importlib_loader.py
src/funny_jump/game/: button.py  button_manager.py  collision_manager.py  config.py  difficulty_parameters.py  game_director.py  level.py  level_manager.py  path_to_assets.py  platform_manager.py  sprite_manager.py  text_manager.py
src/funny_jump/game/assets/: gui_theme.json
src/funny_jump/game/exception/: base.py
src/funny_jump/game/score/: score_storage.py
src/funny_jump/game/screen/: base.py  end.py  intermediate.py  level_choice.py  main_game.py  start.py
src/funny_jump/game/sprites/: basic_platform.py  mobile_platform.py  onetime_platform.py  platform.py  platform_sprite.py  player.py
