[build-system]
requires = [
    'setuptools==68.1.2',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'funny_jump'
version = '0.0.1'
description = 'A Funny Jump game!'
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
    'pygame-ce==2.5.2',  # Community Edition версия пайгейма, 
                         # это то же самое что и обычный пайгейм, просто его форк с более открытой лицензией
                         # его разрабатывают те же разработчики
                         # короче это просто пайгейм с более частыми багфиксами и с открытой лицензией
                         # It is a fork of the upstream pygame project by its former core developers, 
                         # and was created after impossible challenges prevented them from continuing development upstream. 
                         # The new distribution aims to offer more frequent releases, continuous bugfixes and enhancements, 
                         # and a more democratic governance model.
                         # пришлось использовать именно его, так как pygame-gui его требует
                         # и если использовать обычный pygame и CE вместе - игра будет крашится
                         # в игре не используются никаких спец. возможностей именно CE (если они вообще есть)
                         # и игра может быть спокойно запущена на обычном pygame
                         # надеюсь, проблем с этим не возникнет :)
    'pygame_gui==0.6.10',
]

[project.optional-dependencies]
lint = [
    'ruff==0.9.4',
    'mypy==1.15.0',
]
ci = [
    'mypy==1.15.0',
    'ruff==0.9.4',
]
build = [
    'pyinstaller==6.11.1',
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.mypy]
strict = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
ignore_missing_imports = false
warn_no_return = true

files = ["src/"]

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
select = ['ALL']

ignore = [
  # Strange and obscure
  'D100',
  'D104',
  'D101',
  'D105',
  'D102',
  'RET504',
  'D103',
  'PLR0913',
  'S101',
  'EM101',
  'TRY003',
  'D107',
  'ARG002',
  'RUF001',
  'TC003',
  'PLR0912',
  'C901',
  'SIM21',
  'RUF003',
  'SIM110',
  # Does not work correctly
  'TC002',
  'TC001',
  'S311',
  'PGH003',
]

[[project.authors]]
name = 'lubaskinc0de'
email = 'lubaskincorporation@gmail.com'

[project.scripts]
funny_jump = "funny_jump.bootstrap.cli:main"